# grandorgue-odf

./: .gitignore  README.md  USAGE_GUIDE.txt  odf generator
c++/NoisePipes/src/: NPFrame.cpp  NoisePipes.h
delphi/OrganBuilder/: Build.bat
delphi/OrganBuilder/Src/Help/: Manual-English.tex
delphi/OrganBuilder/Src/Install/: OrganBuilder.iss  Postscript.txt
images/cc-by-sa/: README
java/jMakeOdf/: .classpath  .project  Kdousov_example.txt  LICENSE.txt  README.txt  StMichel_example.txt  definition_example.txt  formatter.xml
java/jMakeOdf/src/make_odf/: Attack.java  Button.java  Colour.java  Counters.java  Coupler.java  CouplerType.java  DisplayMetrics.java  Drawstop.java  Enclosure.java  Function.java  GUIElement.java  IPipeSet.java  Image.java  MIDINrSampleFilter.java  Manual.java  NumberUtil.java  OdfWriter.java  OdfWriterException.java  Organ.java  Panel.java  Pipe.java  PipeSetUtil.java  Rank.java  Release.java  ReleaseFolderFilter.java  Stop.java  Switch.java  TextFileParser.java  TextFileParserException.java  Tokenizer.java  Tremulant.java  TremulantFolderFilter.java  WindchestGroup.java  jMakeOdf.java
java/jOdfCleaner/: LICENSE.txt  README.txt
java/jOdfCleaner/src/odfcleaner/: jOdfCleaner.java
noisepipes/: .gitignore  CMakeLists.txt  README.txt
noisepipes/resources/: NoisePipes.desktop.in  NoisePipes.rc.in
noisepipes/src/: NPDef.h.in  NPFrame.cpp  NPFrame.h  NPPipe.cpp  NPPipe.h  NoisePipes.cpp
php/: Krzeszow.php  Prag.php  header.php  scan.php
src/: NPFrame.cpp  NPFrame.h  NPPipe.h  NoisePipes
src/make_odf/: Button.java
